@@ -2089,3 +2089,4 @@
 ( cvs diff -u -r 1.27.2.24 -r 1.27.2.25 src/addr_compl.c;  cvs diff -u -r 1.60.2.69 -r 1.60.2.70 src/addressbook.c;  cvs diff -u -r 1.2.4.13 -r 1.2.4.14 src/browseldap.c;  ) > 2.6.0cvs62.patchset
 ( cvs diff -u -r 1.1.4.20 -r 1.1.4.21 src/expldifdlg.c;  cvs diff -u -r 1.207.2.135 -r 1.207.2.136 src/folderview.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/image_viewer.c;  cvs diff -u -r 1.274.2.156 -r 1.274.2.157 src/mainwindow.c;  cvs diff -u -r 1.5.2.42 -r 1.5.2.43 src/gtk/gtkutils.c;  cvs diff -u -r 1.5.2.5 -r 1.5.2.6 src/gtk/gtkvscrollbutton.c;  cvs diff -u -r 1.12.2.29 -r 1.12.2.30 src/gtk/prefswindow.c;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/plugins/pgpcore/prefs_gpg.c;  ) > 2.6.0cvs63.patchset
 ( cvs diff -u -r 1.24.2.16 -r 1.24.2.17 Makefile.am;  cvs diff -u -r 1.654.2.2143 -r 1.654.2.2144 configure.ac;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 m4/aclocal-include.m4;  cvs diff -u -r 1.1.4.1 -r 1.1.4.2 m4/check-type.m4;  cvs diff -u -r 1.155.2.49 -r 1.155.2.50 src/Makefile.am;  cvs diff -u -r 1.27.2.25 -r 1.27.2.26 src/addr_compl.c;  cvs diff -u -r 1.382.2.336 -r 1.382.2.337 src/compose.c;  cvs diff -u -r 1.23.2.19 -r 1.23.2.20 src/crash.c;  cvs diff -u -r 1.8.2.21 -r 1.8.2.22 src/export.c;  cvs diff -u -r 1.5.2.14 -r 1.5.2.15 src/exporthtml.c;  cvs diff -u -r 1.1.4.12 -r 1.1.4.13 src/exportldif.c;  cvs diff -u -r 1.179.2.138 -r 1.179.2.139 src/imap.c;  cvs diff -u -r 1.13.2.19 -r 1.13.2.20 src/import.c;  cvs diff -u -r 1.115.2.113 -r 1.115.2.114 src/main.c;  cvs diff -u -r 1.7.2.5 -r 1.7.2.6 src/main.h;  cvs diff -u -r 1.75.2.32 -r 1.75.2.33 src/matcher.c;  cvs diff -u -r 1.83.2.92 -r 1.83.2.93 src/mimeview.c;  cvs diff -u -r 1.150.2.83 -r 1.150.2.84 src/procmsg.c;  cvs diff -u -r 1.96.2.158 -r 1.96.2.159 src/textview.c;  cvs diff -u -r 1.24.2.10 -r 1.24.2.11 src/common/Makefile.am;  diff -u /dev/null src/common/claws.c;  diff -u /dev/null src/common/claws.h;  cvs diff -u -r 1.9.2.16 -r 1.9.2.17 src/common/ssl.c;  cvs diff -u -r -1.7.2.10 -r -1.7.2.11 src/common/sylpheed.c;  cvs diff -u -r -1.5.2.4 -r -1.5.2.5 src/common/sylpheed.h;  cvs diff -u -r 1.1.4.4 -r 1.1.4.5 src/etpan/Makefile.am;  cvs diff -u -r 1.20.2.10 -r 1.20.2.11 src/gtk/Makefile.am;  diff -u /dev/null src/gtk/claws-marshal.list;  cvs diff -u -r 1.2.2.26 -r 1.2.2.27 src/gtk/filesel.c;  cvs diff -u -r 1.1.4.35 -r 1.1.4.36 src/gtk/gtksctree.c;  cvs diff -u -r 1.1.2.52 -r 1.1.2.53 src/gtk/quicksearch.c;  cvs diff -u -r -1.1.2.1 -r -1.1.2.2 src/gtk/sylpheed-marshal.list;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/plugins/bogofilter/bogofilter.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/plugins/bogofilter/bogofilter_gtk.c;  cvs diff -u -r 1.13.2.26 -r 1.13.2.27 src/plugins/clamav/clamav_plugin.c;  cvs diff -u -r 1.9.2.21 -r 1.9.2.22 src/plugins/clamav/clamav_plugin_gtk.c;  cvs diff -u -r 1.13.2.10 -r 1.13.2.11 src/plugins/demo/demo.c;  cvs diff -u -r 1.12.2.16 -r 1.12.2.17 src/plugins/dillo_viewer/dillo_viewer.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/plugins/pgpcore/Makefile.am;  diff -u /dev/null src/plugins/pgpcore/claws.def;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/plugins/pgpcore/pgp_viewer.c;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/plugins/pgpcore/plugin.c;  cvs diff -u -r -1.1.2.5 -r -1.1.2.6 src/plugins/pgpcore/sylpheed.def;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/plugins/pgpinline/Makefile.am;  diff -u /dev/null src/plugins/pgpinline/claws.def;  cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/plugins/pgpinline/plugin.c;  cvs diff -u -r -1.1.2.6 -r -1.1.2.7 src/plugins/pgpinline/sylpheed.def;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/plugins/pgpmime/Makefile.am;  diff -u /dev/null src/plugins/pgpmime/claws.def;  cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/plugins/pgpmime/plugin.c;  cvs diff -u -r -1.1.2.5 -r -1.1.2.6 src/plugins/pgpmime/sylpheed.def;  cvs diff -u -r 1.18.2.43 -r 1.18.2.44 src/plugins/spamassassin/spamassassin.c;  cvs diff -u -r 1.23.2.31 -r 1.23.2.32 src/plugins/spamassassin/spamassassin_gtk.c;  cvs diff -u -r 1.14.2.44 -r 1.14.2.45 src/plugins/trayicon/trayicon.c;  ) > 2.6.0cvs64.patchset
+( cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/image_viewer.c;  ) > 2.6.0cvs65.patchset
